# strix-advanced

./: README.md  RESUME-PROMPT.md  STEP1-ARCHITECTURE-ANALYSIS.md  STEP2-STATIC-ANALYSIS.md  cli.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
agents/: __init__.py  analysis_agent.py  coordinator.py  exploit_agent.py  recon_agent.py  report_agent.py
core/: __init__.py
core/exploitation/: __init__.py  auth_automator.py  chain_builder.py  logic_fuzzer.py  race_detector.py  waf_bypass.py
core/memory/: __init__.py  dedup_engine.py  global_memory.py  scan_memory.py  skill_generator.py
core/recon/: __init__.py  api_discovery.py  custom_rules.py  infrastructure.py  supply_chain.py
core/static_analyzer/: __init__.py  cpg_builder.py  data_flow.py  engine.py  findings.py  sanitizer_analyzer.py
examples/: static_analysis_example.py
tests/: test_core.py
