[project]
name = "strix-advanced"
version = "0.1.0"
description = "Advanced AI-powered security testing platform"
requires-python = ">=3.10"
dependencies = [
    # Core
    "litellm>=1.40.0",
    "httpx>=0.25.0",
    
    # Static Analysis (tree-sitter)
    "tree-sitter>=0.22.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "tree-sitter-go>=0.21.0",
    "tree-sitter-java>=0.21.0",
    
    # Runtime
    "docker>=7.0.0",
    "playwright>=1.40.0",
    
    # Data
    "defusedxml>=0.7.1",
    "jinja2>=3.1.0",
    
    # Reporting
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
